<resources>
    <string name="app_name">urjahub</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up Using</string>
    <string name="email">Email</string>
    <string name="Google_sign_up">Google</string>
    <string name="home">Home</string>
    <string name="my_profile">Profile</string>
    <string name="trips">Trip History</string>
    <string name="faqs">Faq</string>
    <string name="log_out">log out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="notrips">You havent taken any rides</string>
    <string name="name">Name</string>
    <string name="number">Mobile Number</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="qr_code">QR Code</string>
    <string name="unlock_bike">Unlock Bike</string>
    <string name="qr_code_found">QR Code Found</string>
    <string name="enter_email_to_send_reset_password_link">Enter email to send reset password link</string>
    <string name="enter_email">enter email</string>
    <string name="reset_password">Reset Password</string>
    <string name="qr_code_text_here">QR Code Text Here</string>
    <string name="begin_ride">Begin Ride</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="what_services_do_you_provide">What services do you provide ?</string>
    <string name="what_services_do_you_provide_ans">We provide hygrogen powered bicycles for rent to our users.</string>
    <string name="how_can_i_rent_a_bike">How can I rent a bike ?</string>
    <string name="how_can_i_rent_a_bike_ans">To rent a bike, head to our nearest bike station, scan the qr code in the bike to start your ride</string>
    <string name="where_are_your_services_available">Where are our services available?</string>
    <string name="where_are_your_services_available_ans">We are planning to roll out our services in all the metro and capital cities across the country.</string>
    <string name="how_to_contact_us">How can you get in touch with us ?</string>
    <string name="how_to_contact_us_ans">Send us an email at info@urjahub.com. We will get in touch with you at the earliest.</string>
</resources>