<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Dashboard_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/Dashboard_trip_history"
            android:icon="@drawable/ic_trips"
            android:title="@string/trips" />
        <item
            android:id="@+id/Dashboard_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/Dashboard_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faqs" />
        <item
            android:id="@+id/Dashboard_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>

</menu>