<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Faq">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_question"
        android:fontFamily="@font/roboto_medium"
        android:padding="10dp"
        android:text="@string/what_services_do_you_provide"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_question"
        android:fontFamily="@font/roboto_thin"
        android:padding="10dp"
        android:text="@string/what_services_do_you_provide_ans"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_question"
        android:fontFamily="@font/roboto_medium"
        android:padding="10dp"
        android:text="@string/how_can_i_rent_a_bike"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_question"
        android:fontFamily="@font/roboto_thin"
        android:padding="10dp"
        android:text="@string/how_can_i_rent_a_bike_ans"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_question"
        android:fontFamily="@font/roboto_medium"
        android:padding="10dp"
        android:text="@string/where_are_your_services_available"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_question"
        android:fontFamily="@font/roboto_thin"
        android:padding="10dp"
        android:text="@string/where_are_your_services_available_ans"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_question"
        android:fontFamily="@font/roboto_medium"
        android:padding="10dp"
        android:text="@string/how_to_contact_us"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_question"
        android:fontFamily="@font/roboto_thin"
        android:padding="10dp"
        android:text="@string/how_to_contact_us_ans"
        android:textColor="@color/black"
        android:textSize="20sp" />


</LinearLayout>