<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Profile">

    <LinearLayout
        android:id="@+id/Ll_profile"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:background="@color/purple_500"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_profile"
            android:src="@drawable/user_icon"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/Rl_profile"
        android:layout_below="@id/Ll_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/txt_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="5dp"
            android:text="@string/name"
            android:textColor="@color/purple_700"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txt_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_Name"
            android:fontFamily="@font/roboto_thin"
            android:padding="5dp"
            android:text="John Doe"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_userName"
            android:fontFamily="@font/roboto_medium"
            android:padding="5dp"
            android:text="@string/email"
            android:textColor="@color/purple_700"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txt_userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_Email"
            android:fontFamily="@font/roboto_thin"
            android:padding="5dp"
            android:text="johndoe@gmail.com"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_MobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_userEmail"
            android:fontFamily="@font/roboto_medium"
            android:padding="5dp"
            android:text="@string/number"
            android:textColor="@color/purple_700"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txt_userMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_MobileNumber"
            android:fontFamily="@font/roboto_thin"
            android:padding="5dp"
            android:text="9999988888"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </RelativeLayout>


</RelativeLayout>